--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       name="description"
       content="서울대학교 아마추어 천문회 디딤돌 활동 페이지입니다."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>서울대학교 아마추어 천문회 - 디딤돌</title>
 
